@@ -148,6 +148,11 @@
 
     <lang.inspectionSuppressor language="Snakemake" implementationClass="com.jetbrains.snakecharm.inspections.SmkInspectionsSuppressor"/>
 
+    <!--Formatting-->
+    <langCodeStyleSettingsProvider implementation="com.jetbrains.snakecharm.lang.formatter.SmkCodeStyleProvider"/>
+    <lang.formatter language="Snakemake" implementationClass="com.jetbrains.snakecharm.lang.formatter.SnakemakeFormattingModelBuilder"/>
+    <!-- TODO   <lang.lineWrapStrategy language="Markdown" implementationClass="org.intellij.plugins.markdown.editor.MarkdownLineWrapPositionStrategy"/>-->
+
     <localInspection
         language="Snakemake"
         shortName="SmkResourcesKeywordArgsInspection"
