@@ -160,3 +160,8 @@ INSP.NAME.unresolved.subscription.ref=Unresolved key ''{0}''
 TYPES.rule.section.type.text=rule section
 TYPES.rule.wildcard.type.text=rule wildcard
 TYPES.rule.run.variable.type.text=run section parameter
+
+# Formatter
+snakemake.settings.name=Snakemake
+snakemake.settings.blank.lines.around.rulelike=Around rules/checkpoints/subworkflows
+snakemake.settings.wrapping.and.braces.align.multiline.params.in.calls=Align multiline arguments in sections
