@@ -1,0 +1,18 @@
+a = 2
+b = 3
+
+configfile: "dd"
+rule name1:
+    input: "in1"
+rule name2:
+    input: "in2"
+
+
+
+
+
+
+
+# 7 blank lines are before this rule
+checkpoint name3:
+    input: "in3"
