@@ -1,0 +1,3 @@
+rule r:
+    input:
+        "a","b"
