@@ -1,0 +1,4 @@
+rule r:
+    input:
+        "a",
+        "b"
