@@ -1,0 +1,10 @@
+rule r:
+    input:
+        "a","b","c",
+        "d","e","f",
+        "g","h","i",
+        "j","k","l",
+        "m","n","o",
+        "p","a","b",
+        "c","d","e",
+        "f","g","h"
